testsuite/gsksl/errors/no-bool-in-variables.frag
in bool b;

void
main ()
{
}
